--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.13.7",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.174.0"
   }
 }
